# 2DGameEngine

./: .gitignore  .gitmodules  Almond.sln  CMakeLists.txt  GenerateProjects.bat  README.md  premake5.lua
Almond/: Almond.vcxproj  Almond.vcxproj.filters  CMakeLists.txt  Main.cpp  imgui.ini
Almond/dependencies/lib/Debug/: box2d.lib  efsw-static.idb
Almond/dependencies/lib/Release/: assimp-vc142-mt.lib  box2d.lib  efsw-static.lib
Almond/resources/shaders/: Basic.glsl
Almond/src/: Almond.h  Main.cpp
Almond/src/Core/: AlmondApplication.cpp  AlmondApplication.h  Application.cpp  Application.h  Base.h  ComponentManager.hpp  EntitiyManager.hpp  EntryPoint.h  GameSystem.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  SubSystem.h  SystemStack.cpp  SystemStack.h  TimeStep.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.hpp
Almond/src/Core/Components/: RigidBody.h  SpriteRender.h  Transform.h
Almond/src/Core/ECS/: ComponentArray.hpp  ComponentManager.hpp  ECS.hpp  ECSLayer.cpp  ECSLayer.h  ECSTypes.hpp  EntitiyManager.hpp  PackedArray.hpp  SystemManager.hpp
Almond/src/Core/Layers/: ECSLayer.cpp  ImGuiLayer.h  InputLayer.h  Physics2DLayer.cpp  RendererLayer.cpp
Almond/src/Core/Physics2D/: DebugDrawBox2D.cpp  DebugDrawBox2D.h  Geometry2D.cpp  Geometry2D.h  Physics2D.cpp  Physics2D.h  Physics2DSystem.cpp  Physics2DSystem.h  PhysicsWorld.h
Almond/src/Core/Renderer/: Camera.cpp  Camera.h  RenderBatch.cpp  RenderBatch.h  RenderSysten2D.cpp  RenderSysten2D.h  Renderer.cpp  Renderer.h  Renderer.hpp  Renderer2D.cpp  Renderer2D.h  RendererLayer.cpp  RendererLayer.h  Shader.cpp  Shader.h  SpriteSheet.h  Texture.cpp  Texture.h
Almond/src/Core/Renderer/Shaders/: Basic.glsl
Almond/src/Core/ResourceManager/: ResourceManager.h
Almond/src/ECS/: ComponentManager.h  ComponentManager.hpp  ECS.h  ECS.hpp  ECSLayer.cpp  ECSLayer.h  ECSTypes.cpp  ECSTypes.h  EntitiyManager.hpp  Entity.h  PackedArray.hpp  Scene.cpp  Scene.h  SceneView.h  SystemManager.h  SystemManager.hpp
Almond/src/ECS/Components/: BoxCollider2D.h  LightComponent.h  MeshRendererComponent.h  ModelRenderer.h  ModelRendererComponent.h  MovementComponent.h  ProceduralMeshComponent.h  RigidBody.h  SpriteRender.h  SpriteRenderer.h  TagComponent.h  Transform.h
Almond/src/Editor/: EditorLayer.cpp  EditorLayer.h
Almond/src/Editor/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Almond/src/FileSystem/: FileSystem.cpp  FileSystem.h
Almond/src/GUI/: ImGuiCustom.h
Almond/src/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  InputLayer.cpp  InputLayer.h  Physics2DLayer.cpp  Physics2DLayer.h  RendererLayer.cpp  RendererLayer.h
Almond/src/Math/: Math.cpp  Math.h
Almond/src/Physics2D/: DebugDrawBox2D.cpp  Physics2D.cpp  Physics2D.h  Physics2DSystem.cpp  Physics2DSystem.h  PhysicsWorld.cpp
Almond/src/Renderer/: Bitmap.h  CPUBatched_Renderer.cpp  CPUBatched_Renderer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  GLCall.h  GPUBatched_Renderer.cpp  GPUBatched_Renderer.h  Material.h  Mesh.h  Model.h  OldCamera.cpp  OldCamera.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRenderCommand.h  OpenGLVertexArray.h  RenderBatch.cpp  RenderBatch.h  RenderSysten2D.cpp  RenderSysten2D.h  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  UtilCubeMap.cpp  UtilCubeMap.h
Almond/src/Renderer/GLFramework/: GLBuffer.h  GLCubeMap.cpp  GLCubeMap.h  GLFrameBuffer.h  GLMesh.h  GLRenderBuffer.h  GLRenderCommand.h  GLTexture.cpp  GLTexture.h  GLVertexArray.h
Almond/src/Renderer/Mesh/: AMesh.cpp  AMesh.h  ProceduralMesh.cpp  ProceduralMesh.h
Almond/src/ResourceManager/: ResourceManager.cpp
Almond/src/Scenes/: Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Almond/src/System Stack/: ImGuiSystem.cpp  ImGuiSystem.h  InputSystem.h
Almond/src/Systems/: FileSystem.cpp  FileSystem.h  ImGuiSystem.cpp  MaterialSystem.cpp  MaterialSystem.h  TextureSystem.cpp  TextureSystem.h
AlmondNut/: AlmondNut.vcxproj  AlmondNut.vcxproj.filters  CMakeLists.txt  imgui.ini  premake5.lua
AlmondNut/assets/Models/: Cube.mesh  Sphere.mesh
AlmondNut/assets/Models/DamagedHelmet/: DamagedHelmet.gltf
AlmondNut/assets/Models/backpack/: scene.gltf
AlmondNut/assets/Models/rustediron/: scene.gltf
AlmondNut/assets/scenes/: Example.alm
AlmondNut/assets/shaders/: BasicShader_CPUMatrices.glsl  Lambert.glsl  Lit3D.glsl  PBR_EquirectToCubeMap.glsl  PBR_GLTF.glsl  PBR_Irradiance.glsl  PBR_Lambert.glsl  PBR_Prefilter.glsl  SkyBox.glsl
AlmondNut/resources/shaders/: BasicShader_GPUMatrices.glsl  DebugLine.glsl  Lit3D.glsl
AlmondNut/src/: AlmondNutApp.cpp  EditorLayer.cpp  EditorLayer.h  EditorSystem.cpp  EditorSystem.h
AlmondNut/src/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
AlmondNut/src/ProceduralMesh/: MeshGenerator.cpp  MeshGenerator.h
